--- a/docker_compose/docker-compose.yml
+++ b/docker_compose/docker-compose.yml
@@ -1,9 +1,11 @@
 version: '3.7'
 
 services:
-  backend:
-    build:
-      context: ../
-      dockerfile: docker_compose/docker/Dockerfile
+
+  tonometer_statistics:
+    image: simonovm/tonometer_statistics:latest
+    # build:
+    #   context: ../
+    #   dockerfile: docker_compose/docker/Dockerfile
     volumes:
       - "../src/:/var/app"
