--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -1,4 +1,4 @@
-name: build-and-push
+name: Continuous Integration-Continuous Deployment
 
 on:
   push:
@@ -6,21 +6,35 @@ on:
       - master
 
 jobs:
-  build-and-push:
+  docker-build:
     runs-on: ubuntu-latest
-
-    env:
-      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-
+    name: Docker Image Build
     steps:
-    - name: checkout-repository
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v2
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Build Docker Image
+      uses: docker/build-push-action@v2
+      with:
+        context: ../
+        file: ./docker_compose/docker/Dockerfile
+        push: true
+        tags: simonovm/tonometer_statistics:latest
 
-    - name: login
-      run: echo "${DOCKERHUB_TOKEN}" | docker login -u "${DOCKERHUB_USERNAME}" --password-stdin
-
-    - name: build-and-push
-      run: |
-        docker build -t simonovm/tonometer_statistics:latest . -f docker_compose/docker/Dockerfile
-        docker push simonovm/tonometer_statistics:latest
+  deploy:
+    runs-on: ubuntu-latest
+    name: Continuous Deployment
+    needs: [docker-build]
+    steps:
+      - name: Deploy using ssh
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_KEY }}
+          port: ${{ secrets.SSH_PORT }}
+          script: |
+            cd /opt/tonometer_statistics/;docker stop tonometer_statistics;docker rm tonometer_statistics;docker pull simonovm/tonometer_statistics:latest;docker-compose up -d
