--- a/docker_compose/docker/Dockerfile
+++ b/docker_compose/docker/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get install -y sqlite3
 # COPY --chown=www-data:www-data src/pip /var/app/pip
 # COPY --chown=www-data:www-data src /var/app/
 # COPY --chown=www-data:www-data docker_compose/docker/scripts/* /
-ADD src/* /var/app/
+ADD --chown=www-data:www-data src/* /var/app/
 RUN cd /var/app/
 RUN pip install -r pip/requirements.txt
 
