--- a/docker_compose/docker/Dockerfile
+++ b/docker_compose/docker/Dockerfile
@@ -7,8 +7,7 @@ RUN apt-get install -y sqlite3
 COPY --chown=www-data:www-data src/. var/app/
 # COPY --chown=www-data:www-data docker_compose/docker/scripts/* /
 # ADD --chown=www-data:www-data src/* /var/app/
-RUN cd /var/app/
-RUN pip install -r pip/requirements.txt
+RUN cd /var/app/ && pip install -r pip/requirements.txt
 
 VOLUME /var/app/
 WORKDIR /var/app/
