TS-3 Added alembic upgrade head in entrypoint

--- a/ci/docker/Dockerfile
+++ b/ci/docker/Dockerfile
@@ -4,11 +4,11 @@ RUN apt-get update -y
 RUN apt-get install -y sqlite3
 
 COPY src/. var/app/
-# COPY --chown=www-data:www-data ci/docker/scripts/* /
+COPY --chown=www-data:www-data ci/docker/scripts/* /
 RUN cd /var/app/ && pip install -r pip/requirements.txt
 
 VOLUME /var/app/
 WORKDIR /var/app/
 
-# ENTRYPOINT [ "sh", "/docker-entrypoint.sh" ]
+ENTRYPOINT [ "sh", "/docker-entrypoint.sh" ]
 CMD [ "python", "main.py" ]
