--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -37,8 +37,5 @@ jobs:
           key: ${{ secrets.SSH__KEY }}
           port: ${{ secrets.SSH__PORT }}
           script: |
-            echo "${{ vars.ENV_FILE }}" > /opt/tonometer_statistics/.env;
-            echo "${{ secrets.BOT__TOKEN }}" > /opt/tonometer_statistics/.env;
-            echo "${{ secrets.ADMINS__ID }}" > /opt/tonometer_statistics/.env;
-            echo "${{ secrets.LOGTAIL__TOKEN }}" > /opt/tonometer_statistics/.env;
+            printf %"s\n" ${{ vars.ENV_FILE }} ${{ secrets.BOT__TOKEN }} ${{ secrets.ADMINS__ID }} ${{ secrets.LOGTAIL__TOKEN }} > /opt/tonometer_statistics/.env;
             cd /opt/tonometer_statistics/;docker stop tonometer_statistics;docker rm tonometer_statistics;docker pull simonovm/tonometer_statistics:latest;docker-compose up --build -d
