--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -37,5 +37,5 @@ jobs:
           key: ${{ secrets.SSH__KEY }}
           port: ${{ secrets.SSH__PORT }}
           script: |
-            echo "${{ vars.ENV_FILE }}\n${{ secrets.BOT__TOKEN }}\n${{ secrets.ADMINS__ID }}\n${{ secrets.LOGTAIL__TOKEN }}" > /opt/tonometer_statistics/.env;
+            echo '${{ vars.ENV_FILE }}\nBOT__TOKEN=${{ secrets.BOT__TOKEN }}\nADMINS__ID=${{ secrets.ADMINS__ID }}\nLOGTAIL__TOKEN=${{ secrets.LOGTAIL__TOKEN }}' > /opt/tonometer_statistics/.env;
             cd /opt/tonometer_statistics/;docker stop tonometer_statistics;docker rm tonometer_statistics;docker pull simonovm/tonometer_statistics:latest;docker-compose up --build -d
